<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary">
        <fragment
            android:id="@+id/streetviewpanorama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportStreetViewPanoramaFragment" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/tv_parking_spot_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:text="Parking Spot"/>
            <TextView
                android:id="@+id/tv_parking_spot_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:text="\?\?\?\?\?"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Open Spot"/>
                    <TextView
                        android:id="@+id/tv_parking_spot_open_spot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:text="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Cost"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_parking_spot_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:text=""/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textColor="@color/white"
                            android:text="/min"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Distance"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_parking_spot_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:text=""/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textColor="@color/white"
                            android:text="/miles"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_search_control_input_height"
        android:orientation="horizontal"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/app_search_control_input_height"
            android:layout_weight="5"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_date_range_black_18dp"/>
            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/app_search_control_hint_date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/app_search_control_input_height"
            android:layout_weight="5"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_access_time_black_18dp"/>
            <EditText
                android:id="@+id/et_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/app_search_control_hint_time"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/tv_reserve_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/app_search_control_reserve_label"/>
        <TextView
            android:id="@+id/tv_reserve_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_reserve_label"
            android:paddingLeft="5dp"
            android:textColor="@color/red"
            android:text="@string/app_search_control_reserve_time"/>
        <TextView
            android:id="@+id/tv_reserve_max_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/app_search_control_reserve_max_time"/>
    </RelativeLayout>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/sb_reserve_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="@integer/max_reservation_time"
        android:progress="@integer/default_reservation_time"/>

    <Button
        android:id="@+id/btn_pay_to_reserve"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/search_control_search_button"
        android:text="Pay to Reserve"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</LinearLayout>